# algorithms_and_data_structures

./: .gitignore
lab1/: CMakeLists.txt  main.cpp
lab1/Matrix/: matrix.h
lab1/MyVector/: my_vector.h
lab2/: CMakeLists.txt  main.cpp
lab2/LinkedList/: linked_list.h
lab3/: CMakeLists.txt  main.cpp
lab3/Sortings/: bubble_sort.h  comb_sort.h  heap_sort.h
lab3/Stats/: stats.h
lab4/: CMakeLists.txt  main.cpp
lab4/BinarySearchTree/: binary_search_tree.h
lab5/: CMakeLists.txt  main.cpp
lab5/include/: additional_task.h  hash_table.h
lab6/: CMakeLists.txt  main.cpp
lab6/include/: additional_task.h  graph.h
